<resources>
    <string name="app_name">Elderly Fitness</string>

    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_account">Account</string>
    <string name="bot_nav_health">Health</string>

    <string name="top_nav_set">Settings</string>
    <string name="top_nav_res">Resources</string>

    <string name="activity_home_screen">Home Screen</string>
    <string name="activity_exercise_label">Exercises</string>
    <string name="activity_nutrition_label">Nutrition</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_resources_label">Resources</string>
    <string name="activity_account_settings_label">Account Settings</string>
    <string name="activity_user_settings_label">User Settings</string>

    <string name="fragment_home_label">Home</string>
    <string name="fragment_account_label">Account</string>
    <string name="fragment_health_label">Health</string>

    <string name="button_sign_in">Log In</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_nutrition">Nutrition</string>
    <string name="button_exercise">Exercises</string>

    <string name="text_welcome_message">Welcome!</string>
    <string name="text_already_registered">Already a member? Log in here!</string>
    <string name="text_need_to_register">Are you new? Register here!</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_user_registration">New User</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_first_name">First Name</string>
    <string name="hint_enter_last_name">Last Name</string>
    <string name="hint_enter_age">Age</string>
    <string name="hint_enter_weight">Weight (lbs)</string>

    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_resources">ResourcesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="account_page_box_account_settings">Account Settings</string>
    <string name="activity_account_settings">Account Settings</string>
    <string name="re_log_in">RE_LOG IN</string>
    <string name="login_to_access_account_settings">Login to Access Account Settings</string>
    <string name="title_activity_elder_map_location">Map</string>
    <string name="current_weather">Current Weather</string>
    <string name="display_current_weather">Display current Weather</string>
    <string name="_12_hour_forecast">12 Hour Forecast</string>
    <string name="display_12_hour_forecast">Display 12 hour forecast</string>
</resources>
